# terminos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DIFFICULTY_FIX.md  Dockerfile  ENERGY_DEDUCTION_EXAMPLE.md  ENERGY_FEE_IMPLEMENTATION.md  ENERGY_FEE_MODEL.md  ENERGY_QUERY_IMPLEMENTATION.md  FREEZE_TOS_PROOF_FIX.md  LICENSE  README.md  TRANSFER_PROOF_FIX.md  build_all.sh  test_energy_query.md
.github/workflows/: docker-publish.yml
common/: Cargo.toml
common/benches/: energy.rs  homomorphic_encryption.rs  proofs.rs
common/src/: config.rs  difficulty.rs  utils.rs
common/src/account/: energy.rs  energy_tests.rs  mod.rs
common/src/api/: mod.rs  wallet.rs
common/src/block/: miner.rs  version.rs
common/src/contract/: metadata.rs  mod.rs
common/src/transaction/: mod.rs  tests.rs  version.rs
common/src/utils/: energy_fee.rs
daemon/: Cargo.toml
daemon/src/: config.rs  integration_tests.rs  main.rs
daemon/src/core/: blockchain.rs  config.rs  error.rs  hard_fork.rs  mempool.rs  merkle.rs  simulator.rs
daemon/src/p2p/: bootstrap.rs  chain_sync.rs  chain_validator.rs  connection.rs  disk_cache.rs  error.rs  mod.rs  peer.rs  peer_list.rs
daemon/src/rpc/: mod.rs  rpc.rs
genesis/: Cargo.toml
genesis/src/: verify_genesis.rs
miner/: Cargo.toml
miner/src/: main.rs
wallet/: Cargo.toml
wallet/src/: cipher.rs  daemon_api.rs  entry.rs  error.rs  main.rs  network_handler.rs  transaction_builder.rs  wallet.rs
wallet/src/api/: mod.rs  rpc.rs  rpc_server.rs
wallet/src/mnemonics/: mod.rs
wallet/src/precomputed_tables/: native.rs
(+79 files in other folders)
