[package]
name = "terminos_miner"
version = "1.0.0"
edition = "2021"
authors = ["Terminos <info@tos.network>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminos_common = { path = "../common", features = ["prompt", "clap"] }
clap = { version = "4.5.2", features = ["derive"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.30"
lazy_static = "1.4.0"

# Common dependencies
log = "0.4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
anyhow = "1"
rand = "0.8.4"

[features]
default = ["api_stats"]
api_stats = []